set(RTLIB_EXT_CUGL_SOURCES 
    ${CMAKE_CURRENT_SOURCE_DIR}/Include/RTLib/Ext/CUGL/CUGLUtility.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Include/RTLib/Ext/CUGL/CUGLCommon.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Include/RTLib/Ext/CUGL/CUGLContext.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Src/CUGLContext.cpp
)

add_library(RTLib-Ext-CUGL 
    ${RTLIB_EXT_CUGL_SOURCES}
)
target_include_directories(RTLib-Ext-CUGL PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
target_link_libraries(RTLib-Ext-CUGL PUBLIC RTLib-Ext-CUDA RTLib-Ext-GL)
set_target_properties(RTLib-Ext-CUGL PROPERTIES FOLDER RTLib/RTLib/Ext/CUGL)

foreach(FILE_NAME ${RTLIB_EXT_CUGL_SOURCES})
    get_filename_component(TEMP_FILE_NAME_BASE "${FILE_NAME}" NAME_WE)
    get_filename_component(TEMP_FILE_EXT  "${FILE_NAME}" EXT)
    string(TOUPPER ${TEMP_FILE_NAME_BASE} TEMP_FILE_NAME)
    string(REPLACE "CUGL" "CUGL_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "BUFFER" "_BUFFER_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "TEXTURE" "_TEXTURE_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "PROGRAM" "_PROGRAM_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "PIPELINE" "PIPELINE_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "MESH" "MESH_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "SHADER" "SHADER_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "CONTEXT" "CONTEXT_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "1D" "1D_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "2D" "2D_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "3D" "3D_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "ARRAY" "ARRAY_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "VERTEXARRAY" "VERTEX_ARRAY" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    string(REPLACE "CUGL__" "CUGL_" TEMP_FILE_NAME ${TEMP_FILE_NAME})
    set(TEMP_FILE_NAME "RTLIB_EXT_CUGL_${TEMP_FILE_NAME}H")
    message(STATUS ${TEMP_FILE_DIR})
    if ( TEMP_FILE_EXT STREQUAL  ".h")
        file(WRITE ${FILE_NAME} "#ifndef ${TEMP_FILE_NAME}\n#define ${TEMP_FILE_NAME}\n#endif\n")
    else()
        file(WRITE ${FILE_NAME} "")
    endif()
endforeach()
